// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Highlighted can highlight the whole string 1`] = `
<span
  className="highlighted"
>
  abc
</span>
`;

exports[`Highlighted ignores spaces and hyphens 1`] = `
Array [
  "a",
  <span
    className="highlighted"
  >
    bcde-f g
  </span>,
  "h",
]
`;

exports[`Highlighted is insensitive in its matching 1`] = `
Array [
  "S",
  <span
    className="highlighted"
  >
    MIT
  </span>,
  "H #201387 t",
  <span
    className="highlighted"
  >
    mit
  </span>,
  "s",
]
`;

exports[`Highlighted renders the content, wrapping the matching text in a span 1`] = `
Array [
  "SMITH #20",
  <span
    className="highlighted"
  >
    138
  </span>,
  "7",
  <span
    className="highlighted"
  >
    138
  </span>,
  "20",
]
`;

exports[`Highlighted renders the original content if no highlight text is specified 1`] = `"SMITH #201387"`;

exports[`PropertiesList highlights requested text 1`] = `
<div
  className="m-properties-list"
>
  <table
    className="m-properties-list__table"
  >
    <tbody>
      <tr
        className="m-properties-list__property "
      >
        <td
          className="m-properties-list__property-label"
        >
          Run
        </td>
        <td
          className="m-properties-list__property-value"
        >
          <span
            className="highlighted"
          >
            run
          </span>
          -1
        </td>
      </tr>
      <tr
        className="m-properties-list__property "
      >
        <td
          className="m-properties-list__property-label"
        >
          Vehicle
        </td>
        <td
          className="m-properties-list__property-value"
        >
          v1-label
        </td>
      </tr>
      <tr
        className="m-properties-list__property m-properties-list__property--operator fs-mask"
      >
        <td
          className="m-properties-list__property-label"
        >
          Operator
        </td>
        <td
          className="m-properties-list__property-value"
        >
          PATTI SMITH #op1
        </td>
      </tr>
      <tr
        className="m-properties-list__property m-properties-list__property--last-login"
      >
        <td
          className="m-properties-list__property-label"
        >
          Last Login
        </td>
        <td
          className="m-properties-list__property-value"
        >
          4 hr 3 min; 1:38 PM
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`PropertiesList renders a properties list for a ghost 1`] = `
<div
  className="m-properties-list"
>
  <table
    className="m-properties-list__table"
  >
    <tbody>
      <tr
        className="m-properties-list__property "
      >
        <td
          className="m-properties-list__property-label"
        >
          Run
        </td>
        <td
          className="m-properties-list__property-value"
        >
          123-0123
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`PropertiesList renders a properties list for a vehicle 1`] = `
<div
  className="m-properties-list"
>
  <table
    className="m-properties-list__table"
  >
    <tbody>
      <tr
        className="m-properties-list__property "
      >
        <td
          className="m-properties-list__property-label"
        >
          Run
        </td>
        <td
          className="m-properties-list__property-value"
        >
          run-1
        </td>
      </tr>
      <tr
        className="m-properties-list__property "
      >
        <td
          className="m-properties-list__property-label"
        >
          Vehicle
        </td>
        <td
          className="m-properties-list__property-value"
        >
          v1-label
        </td>
      </tr>
      <tr
        className="m-properties-list__property m-properties-list__property--operator fs-mask"
      >
        <td
          className="m-properties-list__property-label"
        >
          Operator
        </td>
        <td
          className="m-properties-list__property-value"
        >
          PATTI SMITH #op1
        </td>
      </tr>
      <tr
        className="m-properties-list__property m-properties-list__property--last-login"
      >
        <td
          className="m-properties-list__property-label"
        >
          Last Login
        </td>
        <td
          className="m-properties-list__property-value"
        >
          4 hr 3 min; 1:38 PM
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`PropertiesList renders generic properties 1`] = `
<div
  className="m-properties-list"
>
  <table
    className="m-properties-list__table"
  >
    <tbody>
      <tr
        className="m-properties-list__property "
      >
        <td
          className="m-properties-list__property-label"
        >
          Label 1
        </td>
        <td
          className="m-properties-list__property-value"
        >
          Value 1
        </td>
      </tr>
      <tr
        className="m-properties-list__property "
      >
        <td
          className="m-properties-list__property-label"
        >
          Label 2
        </td>
        <td
          className="m-properties-list__property-value"
        >
          Value 2
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
